@@ -1,5 +1,5 @@
 <?php
-// $Id: cache.inc,v 1.24 2009-02-17 23:31:05 merlinofchaos Exp $
+// $Id: cache.inc,v 1.25 2009-06-01 23:33:37 merlinofchaos Exp $
 /**
  * @file cache.inc
  *
@@ -118,6 +118,10 @@ function _views_discover_default_views() {
           $cache[$name] = $view;
         }
       }
+
+      // Allow modules to modify default views before they are cached.
+      drupal_alter('views_default_views', $cache);
+
       views_cache_set('views_default_views', $cache, TRUE);
     }
   }
